--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "server": "json-server --watch src/jobs.json --port 5000"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "lodash.debounce": "^4.0.8",
+    "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
